--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,3 +1,5 @@
+*                               @ThirtyMadison/eng-growth-nurx
+
 .circleci/            @ThirtyMadison/infra
 .github/              @ThirtyMadison/infra
 .infra/               @ThirtyMadison/infra
